Added bio score
